# inzynierka-ci-devops

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: auto-release.yml  formatter-linter-tests.yml  linter.yml  linux.yml  pull-request-labeler.yml  pull-request-tagger.yml  windows.yml
cmake/: find_repo_version.cmake  generate_clangd_file.cmake  version.hpp.in
cmake/dependencies/: CMakeLists.txt
docs/dev/: SetupGuide.md  WorkingWithTheRepository.md
hello/: CMakeLists.txt
hello/hello/: main.cpp
libhello/: CMakeLists.txt
libhello/libhello/: hello.cpp  hello.hpp
libresin/: CMakeLists.txt
libresin/libresin/: resin.cpp  resin.hpp
libresin/libresin/core/: transform.cpp  transform.hpp
libresin/libresin/utils/: logger.cpp  logger.hpp
libresin/tests/: example_test.cpp  glm_helper.hpp
libresin/tests/core/: transform_test.cpp
patches/: imgui.patch
resin/: CMakeLists.txt
resin/resin/: main.cpp  resin.cpp  resin.hpp
resin/resin/core/: graphics_context.cpp  graphics_context.hpp  window.cpp  window.hpp
resin/resin/event/: event.hpp  window_events.hpp
resin/tests/: example_test.cpp
